css/blog.css
* {
  padding: 0px;
  height: auto;
  margin-bottom: 150px;
  box-sizing: border-box;
  font-family: 'Open Sans', sans-serif;
}

/* The below sets up the page container to allow for FlexBox styling of the child elements (the blog posts and menu components) */

blogpage {
  padding-bottom: 950px;
  display: flex;
  flex-direction: row;
}

/* The below is the left fixed navigation bar which displays the blog post names for quick navigation. It ensures the menu continues to display with scroll movement. */

bloglistcontainer {
  width: 180px;
  height: auto;
  top: 0;
  left: 0; 
  position: fixed;
  margin-top: 465px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 5px 5px 5px 5px;
  justify-content: flex-start;
}

bloglistcontainer h3 {
  font-size: 16px;
  padding: 0 0 15px 5px;
}

.latest-posts-entry {
  color: #bf8589;
  font-size: 11px;
  display: flex;
  justify-content: space-between;
  width: auto;
  padding: 5px 5px;
  margin-bottom: 15px;
}

/* The below code transforms the color of the box displaying the blog post name (with link) so that the user knows they are about to select that option */

.latest-posts-entry:hover {
  background-color:#84a2a3;
  box-shadow: 2px 2px 5px #bf8589;
}

.latest-posts-entry:hover .blog-post-title{
  color: white;
}

.blog-post-title {
  text-decoration: none;
  color: black;
}

/* The below is the grid for blog posts article setup (so they all display alike and ensure title is on top, then date, image to the left and artile underneath.   */

blogpostcontainer {
  width: 100vw;
  height: 100vh;
  margin-left: 180px; 
  margin-top: 20px;
}

blogpostarticle {
  border-bottom: 1px dashed #bf8589;
  grid-row: 2;
  grid-column: 2;
  display: grid;
  grid-template-columns: 1.5fr 1fr;
  grid-template-rows: 3;
}

.post-img {
  grid-row: 1 / 3;
  grid-column: 1;
  border: 1px solid pink;
  border-radius: 5px;
  width: auto;
  height: 150px;
  background-size: cover;
  background-position: center;
  margin-top: 15px;
}

.post-title {
  grid-row: 1;
  grid-column: 2;
  font-size: 16px;
  font-weight: bold;
  text-align: center;
  padding: 20px 2px 2px 0;
}

.post-date {
  grid-row: 2;
  grid-column: 2;
  font-size: 14px;
  font-weight: lighter;
  text-align: center;
}

.article {
  grid-row: 3;
  grid-column: 1 / 3;
  font-size: 10.5px;
  padding: 15px 0;
}

/* The below places the images onto the blog posts:  */

#blogpost1 .post-img {
  background-image: url(/design/kingproteas.jpeg)
}

#blogpost2 .post-img {
  background-image: url(/design/bikewheel.jpg)
}

#blogpost3 .post-img {
  background-image: url(/design/whitebike.jpg)
}

#blogpost4 .post-img {
  background-image: url(/design/scratchedpinkbackground.jpg)
}

#blogpost5 .post-img {
  background-image: url(/design/retromoped.jpg)
}

/* The below is the unique css for displaying on a mobile device  */

@media only screen and (max-width: 600px) {
  * {
    padding: 0px;
    height: auto;
    margin-bottom: 150px;
    box-sizing: border-box;
    font-family: 'Open Sans', sans-serif;
  }
  
  blogpage {
    padding: 5px;
    margin-top: 110px;
    height: auto;
    display: flex;
    flex-direction: row;
    padding-bottom: 150px;
  }
  
  bloglistcontainer {
    width: 115px;
    height: 100%;
    top: 0;
    left: 0; 
    position: fixed;
    margin-top: 270px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 15px 5px 10px 0;
    justify-content: flex-start;
  }
  
  bloglistcontainer h3 {
    font-size: 13px;
    padding: 0 0 10px 0;
  }
  
  .latest-posts-entry {
    color: #bf8589;
    font-size: 9px;
    display: flex;
    justify-content: space-between;
    width: auto;
    padding: 5px 5px;
    margin-bottom: 15px;
    border-bottom: 1px dashed pink;
  }
  
  .latest-posts-entry:hover {
    background-color:#84a2a3;
    box-shadow: 2px 2px 5px #bf8589;
  }
  
  .latest-posts-entry:hover .blog-post-title{
    color: white;
  }
  
  .blog-post-title {
    text-decoration: none;
    color: black;
  }
    
  blogpostcontainer {
    width: 100vw;
    margin-left: 110px; 
  }
  
  blogpostarticle {
    border-bottom: 1px dashed #bf8589;
    grid-row: 2;
    grid-column: 2;
    display: grid;
    grid-template-columns: 1.5fr 1fr;
    grid-template-rows: 3;
  }
  
  .post-img {
    grid-row: 1 / 3;
    grid-column: 1;
    border: 1px solid pink;
    border-radius: 5px;
    width: auto;
    height: 90px;
    background-size: cover;
    background-position: center;
    margin-top: 5px;
  }
  
  .post-title {
    grid-row: 1;
    grid-column: 2;
    font-size: 12px;
    font-weight: bold;
    text-align: center;
    padding: 20px 2px 2px 0;
  }
  
  .post-date {
    grid-row: 2;
    grid-column: 2;
    font-size: 11px;
    font-weight: lighter;
    text-align: center;
  }
  
  .article {
    grid-row: 3;
    grid-column: 1 / 3;
    font-size: 9.5px;
    padding: 15px 0;
  }
}

